# proj-final-prog

./: .gitignore  README.md  WIKI.md  pyproject.toml
backend/: README_FILE_UPLOAD.md  requirements-file-processing.txt  settings.py  test_pdf_extraction.py
backend/agent/: agent_prompt.py  graph.py  nodes.py  states.py
backend/agent/agent_toolbox/: toolbox.py
backend/agent/agent_toolbox/tools/: doc_search.py
backend/api/: main.py
backend/api/routers/: agent.py  documents.py
backend/api/schemas/: __init__.py  agent_schemas.py  document_schemas.py
backend/common/: embedding_config.py  llm_config.py  types.py
backend/examples/: document_upload_example.py  file_upload_example.py
backend/tests/common/: __init__.py  test_llm_config.py
backend/utils/: embeddings.py  file_processing.py  text_chunking.py
backend/vector_store/: pinecone_utils.py
